added image levels

--- a/finding-android1/app.yaml
+++ b/finding-android1/app.yaml
@@ -5,6 +5,8 @@ api_version: 1
 threadsafe: yes
 
 handlers:
+- url: /stylesheets
+  static_dir: stylesheets
 - url: /favicon\.ico
   static_files: favicon.ico
   upload: favicon\.ico
@@ -17,4 +19,3 @@ libraries:
   version: "2.5.2"
 - name: jinja2
   version: latest
-  
