--- a/finding-android1/app.yaml
+++ b/finding-android1/app.yaml
@@ -12,6 +12,8 @@ handlers:
 - url: /favicon\.ico
   static_files: favicon.ico
   upload: favicon\.ico
+- url: /scripts
+  static_files: scripts
 
 - url: .*
   script: main.app
